# plugin

./: CMakeLists.txt
.cache/clangd/index/: ambisonic.h.FBCF18D0A5AD8AFD.idx  audio-buffer.h.1AD292F24D8214EA.idx  audio-ports-activation.h.9CFA2364299F9173.idx  audio-ports-config.h.64BE041FA74D2E8C.idx  audio-ports.h.8F5051B0377692CA.idx  clap.h.7CF4C32CA56C037A.idx  color.h.802EFA0E89DA282D.idx  configurable-audio-ports.h.C3B8B1C49816203F.idx  context-menu.h.A769453874E7FB3E.idx  entry.h.513AD85C7660F4DA.idx  event-registry.h.5A95682577637401.idx  events.h.A7659A11A86511DA.idx  fixedpoint.h.998ED4BC45B95655.idx  gui.h.B0F9ECDC3ADD05A9.idx  gui_x11.c.5DADEC22130038B3.idx  gui_x11.h.AEC71021EF06C7C9.idx  host.h.E453C3899E2B6401.idx  id.h.D3921B907094E6B3.idx  latency.h.998BB0D1AC0A8D57.idx  log.h.F91A745D554E335F.idx  macros.h.0765C40C5289BBCC.idx  main.c.F156DF875B123E76.idx  note-name.h.76B3C1B6F8AF2068.idx  note-ports.h.822DBB1D5CDF3D42.idx  param-indication.h.A000DC8B2F85D871.idx  params.h.F5ADD6357A1D992F.idx  plugin-factory.h.048E3BE1EC4A35CA.idx  plugin-features.h.900396A379CEC029.idx  plugin.h.2193DEE2B2FA383F.idx  plugin.h.BCBF76C570D06A87.idx  posix-fd-support.h.DC0A17D5F567A41F.idx  preset-discovery.h.90D73C729CDB1A1B.idx  preset-load.h.E3935B22AB080BDE.idx  process.h.F506DCA40F7670FD.idx  remote-controls.h.A1FBFA6D33D84B15.idx  render.h.18B61D9F7EF81164.idx  state-context.h.CE0D62E1EF8672C6.idx  state.h.9763E27977F51237.idx  std.h.9C9C9A02A4CCCBBB.idx  stream.h.085B25E321FCFAD0.idx  (+12 more)
src/: main.c  plugin.h  utility.h
src/gui/: gui_x11.c  gui_x11.h
